--- a/spring-batch-docs/modules/ROOT/pages/testing.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/testing.adoc
@@ -1,6 +1,6 @@
 
 [[testing]]
-== Unit Testing
+= Unit Testing
 
 include::attributes.adoc[]
 ifndef::onlyonetoggle[]
@@ -15,7 +15,7 @@ The `spring-batch-test` project includes classes that facilitate this end-to-end
 approach.
 
 [[creatingUnitTestClass]]
-=== Creating a Unit Test Class
+== Creating a Unit Test Class
 
 For the unit test to run a batch job, the framework must load the job's
 `ApplicationContext`. Two annotations are used to trigger this behavior:
@@ -53,7 +53,7 @@ public class SkipSampleFunctionalTests { ... }
 ----
 
 [[endToEndTesting]]
-=== End-To-End Testing of Batch Jobs
+== End-To-End Testing of Batch Jobs
 
 "`End To end`" testing can be defined as testing the complete run of a batch job from
 beginning to end. This allows for a test that sets up a test condition, executes the job,
@@ -145,7 +145,7 @@ public class SkipSampleFunctionalTests {
 ----
 
 [[testingIndividualSteps]]
-=== Testing Individual Steps
+== Testing Individual Steps
 
 For complex batch jobs, test cases in the end-to-end testing approach may become
 unmanageable. It these cases, it may be more useful to have test cases to test individual
@@ -163,7 +163,7 @@ JobExecution jobExecution = jobLauncherTestUtils.launchStep("loadFileStep");
 
 
 [[testing-step-scoped-components]]
-=== Testing Step-Scoped Components
+== Testing Step-Scoped Components
 
 Often, the components that are configured for your steps at runtime use step scope and
 late binding to inject context from the step or job execution. These are tricky to test as
@@ -262,7 +262,7 @@ int count = StepScopeTestUtils.doInStepScope(stepExecution,
 ----
 
 [[validatingOutputFiles]]
-=== Validating Output Files
+== Validating Output Files
 
 When a batch job writes to the database, it is easy to query the database to verify that
 the output is as expected. However, if the batch job writes to a file, it is equally
@@ -282,7 +282,7 @@ AssertFile.assertFileEquals(new FileSystemResource(EXPECTED_FILE),
 ----
 
 [[mockingDomainObjects]]
-=== Mocking Domain Objects
+== Mocking Domain Objects
 
 Another common issue encountered while writing unit and integration tests for Spring Batch
 components is how to mock domain objects. A good example is a `StepExecutionListener`, as
